cabal-version:      2.4
name:               tweag-icfpc2022
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sjoerd Visscher
maintainer:         sjoerd.visscher@iohk.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable tweag-icfpc2022
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Types
        ISL

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        vector,
        JuicyPixels

    hs-source-dirs:   app
    default-language: Haskell2010
